--- a/i18n/es.json
+++ b/i18n/es.json
@@ -329,6 +329,8 @@
     "settings.bounces.scanInterval": "Intervalo de escaneo",
     "settings.bounces.scanIntervalHelp": "Intervalo en el que el buzón de rebotes debería ser escaneado para encontrar nuevos rebotes (s para segundos, m para minutos).",
     "settings.bounces.sendgridKey": "Llave/Clave SendGrid",
+    "settings.bounces.email": "E-mail address for bounce tracking",
+    "settings.bounces.emailHelp": "Leave blank if you want to use the default 'from' e-mail for bounces as well.",
     "settings.bounces.type": "Tipo",
     "settings.bounces.username": "Nombre usuaria",
     "settings.confirmRestart": "Asegúrese de que las campañas ejecutándose están pausadas. ¿Reiniciar?",
